# NarratorDB

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  backlinks.md  index.md  python-api.md  resolver.md  types.md
python/narratordb/: __init__.py
src/: backlinks.rs  codec.rs  db.rs  lib.rs  python.rs  resolver.rs  storage.rs  types.rs
